--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,3 +36,123 @@
     transform: rotate(360deg);
   }
 }
+
+.login{
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  background-image: linear-gradient(to top,   #09203f 0%, #537895 100%);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: 'Poppins', sans-serif;
+  text-align: center;
+  
+}
+
+.login-container{
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  border-style: solid;
+  border-color: white;
+  width: 300px;
+  height: auto;
+  background-color: white;
+  border-radius: 3px;
+  padding: 20px;
+  padding-bottom: 0px;
+  text-align: left;
+}
+
+input{
+  width: 100%;
+  height: 30px;
+  border: none;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-color: gray;
+  text-align: left;
+  font-size: 15px;
+  margin-bottom: 10px;
+  
+}
+
+label{
+  text-align: left;
+  font-size: 12px;
+}
+
+.logo{
+  text-align: center;
+  margin: 55px;
+  font-weight: bolder;
+  color: white;
+  width: 120px;
+  margin-left: auto;
+  margin-right: auto;
+  border-width: 1px;
+  border-radius: 3px;
+  padding-top: 6px;
+
+}
+
+.logo .icon{
+  font-size: 55px;
+  text-shadow: 2px 2px 3px black;
+  margin-bottom: -15px;
+  padding: 0;
+}
+
+h4{
+  text-align: center;
+  font-weight: bolder;
+  font-size: 20px;
+  color: #09203f;
+}
+
+.login-button{
+  margin: -3px;
+}
+
+.google{
+  margin-top: 20px;
+  width: 300px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+button{
+  margin-top: 15px;
+  width: 100%;
+  font-size: 20px;
+  background-image: linear-gradient(to right,   #537890 0%, #537995 100%);
+  color: white;
+  border-radius: 3px;
+  margin-bottom: 20px;
+}
+
+button:hover{
+  background-image: linear-gradient(to right,   #6f9fbf 0%, #537995 100%);
+}
+
+input:focus, textarea:focus, select:focus{
+        outline: none;
+}
+
+.sign-up{
+  padding-top: 20px;
+  border-top-style: solid;
+  margin-left: -22px;
+  margin-right: -22px;
+  border-color: gray;
+  border-width: 1px;
+  background-color: #f5f2f2;
+  padding-bottom: 20px;
+}
+
+a{
+  font-weight: bolder;
+}
+
